--- a/aprendizado.html
+++ b/aprendizado.html
@@ -41,7 +41,7 @@
   <br>
   <!--#region CURSOS -->
   <br>
-  <div class="child js-post">
+  <div class="child js-post" style="display: none;">
     <img src="./files/web.webp" alt="">
     <div class="overlay">
       <h3>Curso de Web Design</h3>
