--- a/desenvolvimento.html
+++ b/desenvolvimento.html
@@ -20,6 +20,7 @@
 
 <menu-bar></menu-bar>
 
+<div class="js-page">
 <div class="js-post">
   <h1>Desenvolvimento</h1>
   <p>
@@ -30,6 +31,7 @@
   <p class="notas">
     Novos projetos estão sendo desenvolvidos neste exato momento e em breve estarão por aqui!
   </p>
+</div>
 </div>
 
 </html>
