--- a/webdesign/intro.html
+++ b/webdesign/intro.html
@@ -35,15 +35,15 @@
     <a href="./cores.html">Cores</a>
     <a href="./margemborda.html">Margem e borda</a>
     <a href="./estilos.html">Estilos</a>
-    <a href=".">Atributos Globais</a>
+    <a href="./attglobais.html">Atributos Globais</a>
     <a href=".">Ids e classes</a>
     
     <p>Elementos HTML</p>
     
-    <a href=".">Elementos HTML</a>
-    <a href=".">Listas</a>
-    <a href=".">Links</a>
-    <a href=".">Tabelas</a>
+    <a href="./elementoshtml.html">Elementos HTML</a>
+    <a href="./listas.html">Listas</a>
+    <a href="./links.html">Links</a>
+    <a href="./tabelas.html">Tabelas</a>
     <a href=".">Conteúdo incorporado</a>
     <a href=".">Div e Span</a>
     <a href=".">Tags personalizadas</a>
