--- a/aprendizado.html
+++ b/aprendizado.html
@@ -21,103 +21,17 @@
 <menu-bar></menu-bar>
 
 <div class="js-page">
+  <br>
   <div class="js-post">
-    <h1>Aprendizado on-line</h1>
-    <p>Confira aqui o material de apoio atualizado de todos os cursos.</p>
-    <p>Os conteúdos a seguir são transcritos das apostilas dos cursos. Estes materiais não são os cursos em
-      si, para acompanhar você precisará efetuar um curso online ou presencial.
-    </p>
-    <div>
-      <p>Inscreva-se num curso presencial entrando em contato por um meio de sua preferência em:</p>
-      <a href="https://www.jorgesouza.com.br/contato.html" class="js-button"
-        target="_blank">Contato</a>
-    </div>
-    <div>
-      <p>Inscreva-se num curso online no site da Udemy:</p>
-      <a href="https://www.udemy.com/user/jorge-souza-oliveira-dos-santos" class="js-button"
-        target="_blank">Cursos on-line</a>
-    </div>
-  </div>
-  <br>
-  <!--#region CURSOS -->
-  <br>
-  <div class="child js-post" style="display: none;">
-    <img src="./files/web.webp" alt="">
-    <div class="overlay">
-      <h3>Curso de Web Design</h3>
-      <p>HTML, CSS e Web Design Responsivo.</p>
-      <a class="js-button" href="./webdesign/intro.html">Conheça</a>
-    </div>
-  </div>
-  <br>
-  <div class="child js-post">
-    <img src="./files/design.webp" alt="">
-    <div class="overlay">
-      <h3>Curso Completo de Design Gráfico</h3>
-      <p>Aprenda os conceitos fundamentais de design gráfico.</p>
-      <a class="js-button" href="./design/intro.html">Conheça</a>
-    </div>
-  </div>
-  <br>
-  <div class="child js-post">
-    <img src="./files/info.webp" alt="">
-    <div class="overlay">
-      <h3>Curso de Informática Básica e Avançada</h3>
-      <p>Aprenda informática básica e avançada e muito mais.</p>
-      <a class="js-button" href="./informatica/intro.html">Conheça</a>
-    </div>
-  </div>
-  <br>
-
-
-  <div class="js-post">
-    <h2>Prefere adquirir uma apostila?</h2>
-    <p>Adquira as apostilas e manuais dos cursos no link a seguir:</p>
-    <a class="js-button" href="/apostilas.html">Apostilas</a>
+    <h3>Aguarde...</h3>
+    <p>Você será redirecionado para o centro de aprendizado em breve.</p>
   </div>
   <br>
 </div>
 
-
-<style>
-  .child {
-    background-color: var(--pretoMedio);
-    display: grid;
-    grid-template-columns: 0.5fr 1.5fr;
-    user-select: none;
-  }
-
-  .child div {
-    margin: 15px;
-    width: 100%;
-  }
-
-  .child img {
-    margin: 15px;
-    pointer-events: none;
-    border: 1px solid;
-    border-image: linear-gradient(45deg, yellow, #A50)1;
-    width: 250px;
-  }
-
-  * {
-    box-sizing: border-box;
-  }
-
-
-  @media (max-width: 600px) {
-    .child {
-      max-width: 100%;
-      margin: 15px 0 15px 0;
-      grid-template-columns: 1fr;
-      text-align: center;
-    }
-
-    .child img {
-      margin: auto;
-    }
-  }
-</style>
+<script>
+  window.location.replace("https://aprendizado-jorgesouza.azurewebsites.net/");
+</script>
 
 </html>
 
