--- a/aprendizado.html
+++ b/aprendizado.html
@@ -38,7 +38,7 @@
                     </div>
                     <div style="width: 100%; display: grid; grid-template-columns: 1fr 1fr; gap: 10px;">
                         <span></span>
-                        <button class="js-button" onclick="Modal.FecharModal()">Fechar</button>
+                        <span></span>
                     </div>
                 </div>
             </div>
