--- a/apostilas.html
+++ b/apostilas.html
@@ -28,6 +28,18 @@
     </p>
   </div>
   <br>
+  <div class="js-post" style="width: 100%; display: grid; grid-template-rows: auto 1fr;" id="ads">
+    <span style="color:white; font-family: sans-serif; display: grid; grid-template-columns: auto 1fr auto;">
+      <span>Publicidade</span>
+      <span></span>
+      <span onclick="document.getElementById('ads').style.display = 'none'" style="cursor: pointer; color: #F30;">Fechar</span>
+    </span>
+    <div style="width: 100%;">
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7018638705666056"
+        crossorigin="anonymous"></script>
+    </div>
+  </div>
+  <br>
   <!--#region CURSOS -->
   <div class="child js-post">
     <img src="./files/designCapa.webp" alt="">
@@ -113,12 +125,25 @@
     </div>
   </div>
   <br>
-
+  
   <div class="js-post">
     <h2>Prefere estudar on-line?</h2>
     <p>Todo o conteúdo das apostilas está disponível gratuito para estudo no link a seguir:</p>
     <a class="js-button" href="/aprendizado.html">Aprendizado on-line</a>
   </div>
+  <br>
+  <div class="js-post" style="width: 100%; display: grid; grid-template-rows: auto 1fr;" id="ads">
+    <span style="color:white; font-family: sans-serif; display: grid; grid-template-columns: auto 1fr auto;">
+      <span>Publicidade</span>
+      <span></span>
+      <span onclick="document.getElementById('ads').style.display = 'none'" style="cursor: pointer; color: #F30;">Fechar</span>
+    </span>
+    <div style="width: 100%;">
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7018638705666056"
+        crossorigin="anonymous"></script>
+    </div>
+  </div>
+  <br>
 
 </div>
 
