--- a/index.html
+++ b/index.html
@@ -164,18 +164,17 @@
   </div>
   <br>
   <div class="js-post" style="width: 100%; display: grid; grid-template-rows: auto 1fr;" id="ads">
-    <span style="display: grid; grid-template-columns: auto 1fr auto;">
-      <p>Publicidade</p>
-      <p></p>
-      <p onclick="document.getElementById('ads').style.display = 'none'" style="cursor: pointer;">Fechar</p>
+    <span style="display: grid; grid-template-columns: auto 1fr auto; color: white; font-family: sans-serif;">
+      <span>Publicidade</span>
+      <span></span>
+      <span onclick="document.getElementById('ads').style.display = 'none'" style="cursor: pointer; color: #F30;">Fechar</span>
     </span>
     <div style="width: 100%;">
-      <h1>Bla?</h1>
-      <p>blablabla blablabla blablabla blablabla blablabla blablabla </p>
       <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7018638705666056"
         crossorigin="anonymous"></script>
     </div>
   </div>
+  <br>
 </div>
 
 </html>
