--- a/aprendizado.html
+++ b/aprendizado.html
@@ -20,18 +20,17 @@
 
 <menu-bar></menu-bar>
 
-<modal></modal>
 <div class="js-page">
     <br>
-    <div class="js-post">
+        <modal id="modal"></modal>
         <script>
             function Aguarde(txt) {
-                document.getElementsByTagName("modal")[0].innerHTML = `
+                document.getElementById("modal").innerHTML = `
             <div class="modal-conteiner">
                 <div class="modal-conteudo" id="modal-conteudo">
                     <div class="modal-conteudo-titulo" style="padding: 15px;">Aguarde...</div>
                     <div class="modal-conteudo-img">
-                        <img src="/files/Loading.gif" alt="">
+                        <img src="./files/Loading.gif" alt="">
                     </div>
                     <div class="modal-conteudo-msg">
                         <p>${txt}</p>
@@ -44,7 +43,7 @@
             </div>
         `;
             }
-            Aguarde("Você será redirecionado para o centro de aprendizado em breve.");
+            Aguarde("Você está sendo redirecionado para o <span style='color:#fb0'>Centro de Aprendizagem.</span>");
         </script>
         <style>
             /* #region MODAL*/
@@ -59,21 +58,22 @@
             }
 
             modal .modal-conteiner {
-                background-color: #ADF2;
+                background-color: var(--pretoMedio);
+                color: azure;
+                font-family: Baloo;
                 backdrop-filter: blur(2px);
                 position: fixed;
                 top: 0;
                 left: 0;
                 width: 100%;
                 height: 100%;
-                z-index: 999;
                 text-align: center;
                 font-size: 1.2rem;
                 user-select: none;
             }
 
             modal .modal-conteudo {
-                display: none;
+                display: block;
                 background-color: black;
                 width: fit-content;
                 max-width: 80vw;
@@ -127,16 +127,14 @@
 
             /* #endregion */
         </style>
-    </div>
     <br>
 </div>
 
 <script>
     setTimeout(() => {
         window.location.replace("https://aprendizado-jorgesouza.azurewebsites.net/");
-    }, 5000);
+    }, 999);
 </script>
 
 </html>
-<footer-bar></footer-bar>
 <btn-up></btn-up>
