--- a/downloads.html
+++ b/downloads.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 
 <head>
-    <title>Aprendizado | Jorge Souza</title>
+    <title>Downloads | Jorge Souza</title>
     <link rel="stylesheet" href="./css/index.css">
     <script src="./javascript/index.js"></script>
     <link rel="icon" type="image/x-icon" href="./logo.svg">
@@ -21,10 +21,13 @@
 
 <div class="menu-moderno-lkju" style="margin: auto; width: fit-content;">
     <h1 style="width: fit-content; margin: auto; padding: 15px;">Cursos</h1>
-    <span><a href="informatica/intro.html">Curso de Informática Básica e Avançada</a></span>
-    <span><a href="design/intro.html">Curso Completo de Design Gráfico</a></span>
+    <span><a href="https://drive.google.com/drive/folders/1BdqsqsVZpEdk01gpMA608pbDoqemAUzD" target="_blank">Curso de Informática Básica e Avançada</a></span>
+    <span><a href="https://drive.google.com/drive/folders/1T14FNxgtS6zDU5he6A74MhUIRTLAlP5i?usp=sharing" target="_blank">Curso Completo de Design Gráfico</a></span>
+    <span><a href="https://drive.google.com/drive/folders/1eCiMVTwoZE93wsB57dURkXkHCAl_MENE?usp=sharing" target="_blank">Curso de Web Design</a></span>
+    <span><a href="https://drive.google.com/drive/folders/14wSufoQj0-dIW7taS6adiV9qBDmh59ea?usp=sharing" target="_blank">Curso de Javascript</a></span>
+    <span><a href="https://drive.google.com/drive/folders/1sjTUvdPB5gxgCQBoah9yeXAggevSDOgl?usp=sharing" target="_blank">Curso de Desenvolvimento de Aplicações Web</a></span>
+    <span><a href="https://drive.google.com/drive/folders/1999UtlyN2TKgaSW8xA2e0zxbB_75aTs-?usp=sharing" target="_blank">Curso Completo de C++</a></span>
 </div>
-
 <style>
     body {
         background-image: url('/files/back.jpg');
